codegen/ui_tests/export_mod_raw_noreturn.stderr
error: functions marked with 'return_raw' must return Result<T, Box<EvalAltResult>>
  --> ui_tests/export_mod_raw_noreturn.rs:11:11
   |
11 | #[rhai_fn(return_raw)]
   |           ^^^^^^^^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `test_mod`
  --> ui_tests/export_mod_raw_noreturn.rs:22:5
   |
22 |     test_mod::test_fn(&mut n);
   |     ^^^^^^^^ use of unresolved module or unlinked crate `test_mod`
   |
   = help: if you wanted to use a crate named `test_mod`, use `cargo add test_mod` to add it to your `Cargo.toml`
